Added redux to the repo and added one sample reddit API call example

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My Cool App</title>
+		<title>My Cool React App</title>
 	</head>
 	<body>
 		<div id="root"></div>
