--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width initial-scale=1 user-scalable=no" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <title>My Cool React App</title>
     </head>
     <body>
